ночной коммит - сделал отображение фотографий на отдельной странице

--- a/app/views/archive/index.html.erb
+++ b/app/views/archive/index.html.erb
@@ -1,2 +1,50 @@
 <h1><%= @title%></h1>
-<p>Find me in app/views/archive/index.html.erb</p>
+
+<% if @all_posts %>
+   <% @all_posts.each do |post|  %>
+    <div class="row">
+        <div class="span12">
+          <div class="row">
+            <div class="span12">
+              <h4><strong><a href="#" style="color:black"><%=h post.name %></a></strong></h4>
+            </div>
+          </div>
+          <div class="row">
+            <div class="span2">
+              <a href="#" class="thumbnail">
+                  <%= image_tag post.image.url(:thumb), :height => "100px" %>
+              </a>
+            </div>
+            <div class="span9">      
+              <p>
+                <%=h post.preview_content %>
+              </p>
+              <p><a class="btn" href="#">Читать далее</a></p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="span11">
+              <p></p>
+              <p>
+                  <div class='pull-left'>
+                        <div style="float:left;margin:4px">
+                          <i class="icon-calendar"></i> 24 марта 2012 |
+                        </div>
+                        <script type="text/javascript">(function() {
+                         if (window.pluso && typeof window.pluso.start == "function") return;
+                         var d = document, s = d.createElement('script'), g = 'getElementsByTagName';
+                         s.type = 'text/javascript'; s.charset='UTF-8'; s.async = true;
+                         s.src = d.location.protocol  + '//share.pluso.ru/pluso-like.js';
+                         var h=d[g]('head')[0] || d[g]('body')[0];
+                         h.appendChild(s);
+                        })();</script>
+                        <div class="pluso pull-right" data-options="small,square,line,horizontal,counter,theme=02" data-services="twitter,vkontakte,facebook,google,livejournal" data-background="#ebebeb" data-url="http://klops.ru/"></div>
+                  </div>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr>
+  <% end %>
+<% end %>
