готова главная страница

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,11 +26,10 @@
               <li><%= link_to "Ветераны", veterans_path %></li>
             </ul>
             <div class="pull-right">
-              <%= image_tag("logo.png", :alt => "информационная поддержка", :class => "logo") %>
+              <a href="http://klops.ru/"><%= image_tag("logo.png", :alt => "информационная поддержка", :class => "logo") %></a>
               <!--<img src="img/logo.png" style="max-height:20px;margin-top:7px" />-->
-
             </div>
-            <div class="pull-right" style="margin-top:9px;margin-right:5px;color:gray"><small>при поддержке</small></div>
+            <div class="pull-right" style="margin-top:9px;margin-right:5px;color:gray"><small>спецпроект</small></div>
           </div>
         </div>
 
