детальная страница дневника победы готова

--- a/app/views/archive/index.html.erb
+++ b/app/views/archive/index.html.erb
@@ -19,7 +19,7 @@
               <p>
                 <%=h post.preview_content %>
               </p>
-              <p><a class="btn" href="#">Читать далее</a></p>
+              <p><%= link_to 'Читать далее', archive_detail_path(post.id), :class=>"btn" %></p>
             </div>
           </div>
           <div class="row">
@@ -38,7 +38,7 @@
                          var h=d[g]('head')[0] || d[g]('body')[0];
                          h.appendChild(s);
                         })();</script>
-                        <div class="pluso pull-right" data-options="small,square,line,horizontal,counter,theme=02" data-services="twitter,vkontakte,facebook,google,livejournal" data-background="#ebebeb" data-url="http://klops.ru/"></div>
+                        <div class="pluso pull-right" data-options="small,square,line,horizontal,counter,theme=02" data-services="twitter,vkontakte,facebook,google,livejournal" data-background="#ebebeb" data-url="<%=url_for :host => request.host, :controller => 'archive', :action => 'detail', :id => post.id %>"></div>
                   </div>
               </p>
             </div>
