--- a/app/views/archive/detail.html.erb
+++ b/app/views/archive/detail.html.erb
@@ -1,2 +1,46 @@
-<h1>Archive#detail</h1>
-<p>Find me in app/views/archive/detail.html.erb</p>
+<%  if @post %>
+<div class="row">
+  <div class="span12">
+    <div class="row">
+      <div class="span12">
+        <h3><strong><a href="#" style="color:black"><%=h @post.name %></a></strong></h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="span2">
+        <a href="#" class="thumbnail">
+            <%= image_tag @post.image.url(:thumb), :height => "100px" %>
+        </a>
+      </div>
+      <div class="span9">      
+        <p>
+          <%=h @post.preview_content %>
+        </p>
+        <p><%=h @post.detail_content %></p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="span11">
+        <p></p>
+        <p>
+            <div class='pull-left'>
+                  <div style="float:left;margin:4px">
+                    <i class="icon-calendar"></i> <%= I18n.localize(@post.created_at, :format => :descr) %> |
+                  </div>
+                  <script type="text/javascript">(function() {
+                   if (window.pluso && typeof window.pluso.start == "function") return;
+                   var d = document, s = d.createElement('script'), g = 'getElementsByTagName';
+                   s.type = 'text/javascript'; s.charset='UTF-8'; s.async = true;
+                   s.src = d.location.protocol  + '//share.pluso.ru/pluso-like.js';
+                   var h=d[g]('head')[0] || d[g]('body')[0];
+                   h.appendChild(s);
+                  })();</script>
+                  <div class="pluso pull-right" data-options="small,square,line,horizontal,counter,theme=02" data-services="twitter,vkontakte,facebook,google,livejournal" data-background="#ebebeb" data-url="http://klops.ru/"></div>
+            </div>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+<hr>
+<% end %>
